<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Asteroides" >

    <TextView
        style="@style/TextoAsteroides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/tituloAplicacion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/botonJugar"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/botonConfigurar"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/botonAcercaDe"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/botonPuntuaciones"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntuaciones" />

</LinearLayout>